--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "mailparser": "^3.7.0",
+    "multer": "^1.4.5-lts.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
