--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "next build"
   publish = "dist/"
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site
